tests/baselines/reference/genericCallWithoutArgs.errors.txt
tests/cases/compiler/genericCallWithoutArgs.ts(4,17): error TS1005: '(' expected.
tests/cases/compiler/genericCallWithoutArgs.ts(4,18): error TS1005: ')' expected.


==== tests/cases/compiler/genericCallWithoutArgs.ts (2 errors) ====
    function f<X, Y>(x: X, y: Y) {
    }
    
    f<number,string>.
                    ~
!!! error TS1005: '(' expected.
                     
!!! error TS1005: ')' expected.